fixed footer links align

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1618,7 +1618,8 @@ html .md-footer-meta.md-typeset a:hover {
     font-size: .64rem;
     margin: auto .6rem 10px;
     padding: .4rem 0;
-    width: 100%
+    width: 100%;
+    text-align: right;
 }
 
 .md-social a.md-social__link {
